tests/algorithms/x/Pascal/strings/top_k_frequent_words.error
compile: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/algorithms/x/Pascal/strings/top_k_frequent_words.pas
fgl.pp(1668,8) Note: Call to subroutine "function TFPGMap<System.ShortString,System.Int64>.IndexOf(const AKey:ShortString):LongInt;" marked as inline is not inlined
fgl.pp(1668,8) Note: Call to subroutine "function TFPGMap<System.ShortString,System.Real>.IndexOf(const AKey:ShortString):LongInt;" marked as inline is not inlined
top_k_frequent_words.pas(155,15) Error: Incompatible types: got "TFPGMap<System.ShortString,System.Real>" expected "TFPGMap<System.ShortString,System.Int64>"
top_k_frequent_words.pas(215) Fatal: There were 1 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
